# ClassicML

./: .gitignore  CMakeLists.txt  README.md  classicml.h  cml.hpp  config.hpp  estimator.hpp  guard.hpp  ino.cpp  ino.h  logger.hpp  metrics.hpp  models.cpp  models.h  optimizer.h  params.hpp  pre.cpp  pre.h  type.hpp  utils.cpp  utils.h
demos/: decision_tree_demo  decision_tree_demo.cpp  demo_common.hpp  gaussian_nb_demo  gaussian_nb_demo.cpp  kmeans_demo  kmeans_demo.cpp  knn_demo.cpp  lasso_regression_demo  lasso_regression_demo.cpp  linear_regression_demo  linear_regression_demo.cpp  linear_regression_demo_gpp  linear_regression_demo_gpp_dbg  linear_regression_demo_sanitized  logistic_regression_demo.cpp  ridge_regression_demo.cpp  svm_demo  svm_demo.cpp
demos/linear_regression_demo.dSYM/Contents/: Info.plist
demos/linear_regression_demo.dSYM/Contents/Resources/DWARF/: linear_regression_demo
demos/linear_regression_demo.dSYM/Contents/Resources/Relocations/aarch64/: linear_regression_demo.yml
demos/linear_regression_demo_gpp_dbg.dSYM/Contents/: Info.plist
demos/linear_regression_demo_gpp_dbg.dSYM/Contents/Resources/DWARF/: linear_regression_demo_gpp_dbg
demos/linear_regression_demo_gpp_dbg.dSYM/Contents/Resources/Relocations/aarch64/: linear_regression_demo_gpp_dbg.yml
demos/linear_regression_demo_sanitized.dSYM/Contents/: Info.plist
demos/linear_regression_demo_sanitized.dSYM/Contents/Resources/DWARF/: linear_regression_demo_sanitized
models/: base_linear_model.hpp  decision_tree.hpp  detail.hpp  gaussian_nb.hpp  kmeans.hpp  knn.hpp  lasso_regression.hpp  linear_regression.hpp  logistic_regression.hpp  ridge_regression.hpp  svm.hpp
notebooks/: 01_linear_regression.ipynb  02_logistic_regression.ipynb  03_kmeans.ipynb
python/: bindings.cpp  build.sh  setup.py
src/: classicml_lib.cpp
(+1 files in other folders)
